--- a/challenge1.html
+++ b/challenge1.html
@@ -5,6 +5,22 @@
 	<title>Challenge #1</title>
 </head>
 <body>
+
+	<div>
+		<button id="button1">PRESS ME!</button>
+		<span id="button1text"></span>
+	</div>	
+	</br>
+	<div>
+		<button id="button2">PRESS ME!</button>
+		<span id="button2text"></span>
+	</div>
 	
+
+
+
+
+
+	<script src="main.js"></script>
 </body>
 </html>
