--- a/challenge1.html
+++ b/challenge1.html
@@ -2,24 +2,21 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="style.css">
 	<title>Challenge #1</title>
 </head>
 <body>
+	<a href="index.html">Go Back</a>
 
 	<div>
 		<button id="button1">PRESS ME!</button>
 		<span id="button1text"></span>
-	</div>	
-	</br>
+	</div>
+	<br>
 	<div>
 		<button id="button2">PRESS ME!</button>
 		<span id="button2text"></span>
 	</div>
-	
-
-
-
-
 
 	<script src="scripts/script1.js"></script>
 </body>
