--- a/challenge3.html
+++ b/challenge3.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="style.css">
 	<title>Challenge #3</title>
 </head>
 <body>
-	<h1 id="key"></h1>
+	<a href="index.html">Go Back</a>
 
+	<div>
+		<h2>You just pressed:</h2>
+		<h1 id="key"></h1>
+	</div>
 
 	<script src="scripts/script3.js"></script>
 </body>
