--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="style.css">
 	<title>EventMiniChallenges</title>
 </head>
 <body>
-	<a href="challenge1.html">Challenge #1</a>
-	<a href="challenge2.html">Challenge #2</a>
-	<a href="challenge3.html">Challenge #3</a>
-	<a href="challenge4.html">Challenge #4</a>
-
+	<div>
+		<h1>Scope/DOM/Event Mini Challenges</h1>
+		<a href="challenge1.html">Challenge #1</a>
+		<a href="challenge2.html">Challenge #2</a>
+		<a href="challenge3.html">Challenge #3</a>
+		<a href="challenge4.html">Challenge #4</a>
+	</div>
 </body>
 </html>
