--- a/challenge2.html
+++ b/challenge2.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="style.css">
 	<title>Challenge #2</title>
 </head>
 <body>
-	<h1 id="warning">DON'T HOVER OVER ME</h1>
+	<a href="index.html">Go Back</a>
+
+	<div>
+		<h1 id="warning" >DON'T HOVER OVER ME</h1>
+	</div>
+
 	<script src="scripts/script2.js"></script>
 </body>
 </html>
